--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=7.0",
     "laravel/framework": "5.*",
-    "stylers/taxonomy": "1.*"
+    "stylers/taxonomy": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
