--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "authors": [
     {
       "name": "Szilveszter Nagy",
-      "email": "szilveszter.nagy@stylersonline.com"
+      "email": "developer@stylersonline.com"
     }
   ],
   "minimum-stability": "dev",
